--- a/dream.css
+++ b/dream.css
@@ -90,4 +90,132 @@ body{
     color: white;
     
 }
-  
+#modal.modal-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  display: none;
+  z-index: 3;
+}
+#btn-modal{
+  position: relative;
+}
+#modal .modal-window {
+  background: #d0eaffb3;
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  width: 400px;
+  height: 500px;
+  position: sticky;
+  top: 40px;
+  padding: 10px;
+}
+#modal .title {
+  padding-left: 10px;
+  display: inline;
+  text-shadow: 1px 1px 2px gray;
+  color: white;
+  position: relative;
+  left: 10%;
+}
+#modal .title h2 {
+  display: inline;
+}
+#modal .close-area {
+  top:-90px;
+  position: relative;
+  display: inline;
+  float: right;
+  padding-right: 10px;
+  cursor: pointer;
+  text-shadow: 1px 1px 2px gray;
+  color: white;
+}
+.footer{
+  position: relative;
+  top: 100px;
+  left: 200px;
+}
+.footer ul {
+  position: absolute;
+  padding: 0;
+  right: 40px;
+  margin: 0;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-family: "FontAwesome";
+  z-index: 6;
+}
+
+.footer ul li {
+  list-style: none;
+  margin: 0 15px;
+}
+
+.footer ul li .fab {
+  font-size: 30px;
+  line-height: 60px;
+  transition: 0.3s;
+  color: #000;
+}
+
+.footer ul li .fab:hover {
+  color: #fff;
+}
+
+.footer ul li a {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #fff;
+  text-align: center;
+  transition: 0.6s;
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
+}
+
+.footer ul li a:hover {
+  transform: translate(0, -10%);
+}
+
+.footer ul li:nth-child(1) a:hover {
+  background-color: rgba(0, 0, 0, 0.829);
+}
+
+.footer ul li:nth-child(2) a:hover {
+  background-color: #e4405f;
+}
+
+.footer ul li:nth-child(3) a:hover {
+  background-color: #12dc70;
+}
+.footer ul li:nth-child(4) a:hover {
+  background-color: #7fffbb;
+}
+.footer p{
+  position: relative;
+  z-index: 5;
+  color: rgb(0, 0, 0);
+  bottom: -200px;
+  left: -43%;
+  font-family: "Poor Story", cursive;
+  font-size: 20px;
+}   
