--- a/page.css
+++ b/page.css
@@ -462,7 +462,7 @@ body{
 	overflow: hidden;
 }
 #card_img{
-    position: absolute;
+  position: absolute;
 	left: 50%;
 	top: 50%;
 	height: auto;
@@ -471,46 +471,44 @@ body{
 	-ms-transform: translate(-50%,-50%);
 	transform: translate(-50%,-50%);
 }
-.card_right{
-    position: relative;
-    top: -102%;
-    left: 13%;
-    z-index: 5;
-    margin-left : 590px;
-	margin-right : 20px;
-}
 
 .card_right h1{
-    position: relative;
-    left:5%;
-    padding-top : 15px;
+  padding-top : 15px;
 	font-size : 1.3rem;
 	color : #ffffff;
 }
+.card_a{
+  position: absolute;
+  left: 55%;
+}
+.card_b{
+  position: absolute;
+  left: 55%;
+  top:30%;
+}
+.card_c{
+  position: absolute;
+  left: 55%;
+  top: 60%;
+}
 .card_right p{
     color: #ffffff;
-    position: relative;
-    left:4%;
 }
 .card_right .separator{
-  position: relative;
   margin-top : 1px;
   border : 1px solid #ffffff;
-  width: 50%;
-  left:3%;
+  width: 100%;
 }  
 .card_left{
-  position: relative;
-  top: -139.5%;
-  left: -1%;
+  position: absolute;
+  left: -50%;
+  top:48.5%;
   z-index: 5;
   margin-left : 590px;
 margin-right : 20px;
 }
 
 .card_left h1{
-  position: relative;
-  left:-30%;
   padding-top : 15px;
 font-size : 1.3rem;
 color : #ffffff;
@@ -518,21 +516,14 @@ color : #ffffff;
 h2{
 font-size: 30px;
 color: white;
-position: relative;
-left: -10%;
 font-family: 'Righteous', cursive;
 }
 .card_left p{
   color: #ffffff;
-  position: relative;
-  left:-30%;
 }
 .card_left .separator{
-    position: relative;
     margin-top : 1px;
 	  border : 1px solid #ffffff;
-    width: 50%;
-    left:-30%;
 }
 .footer p{
   position: relative;
@@ -617,51 +608,34 @@ font-family: 'Righteous', cursive;
   background-color: #7fffbb;
 }
 
-.container {
+.outer {
+  display: flex;
   position: relative;
+  left: -1%;
+  top: -10%;
   width: 74%;
   height: 90%;
-  z-index: 4;
-  top:35%;
-  left: 49%;
-  transform: translate(-50%, -50%);
+  margin: 0 auto;
   overflow: hidden;
+  z-index: 5;
   border: 5px solid #ffffff;
   border-radius: 15px;
   box-shadow: 10px 25px 30px rgba(255, 255, 255, 0.3);
 }
-.wrapper {
+
+.inner-list {
   display: flex;
+  transition: 1s ease-out;
   height: 100%;
-  width: 100%;
-  object-fit: cover;
-  animation: slide 20s infinite;
 }
-@keyframes slide {
-  0% {
-    transform: translateX(0%);
-  }
-  10% {
-    transform: translateX(5%);
-  }
-  20% {
-    transform: translateX(-104.5%);
-  }
-  35% {
-    transform: translateX(-104.5%);
-  }
-  50% {
-    transform: translateX(-204.7%);
-  }
-  65% {
-    transform: translateX(-204.7%);
-  }
-  80% {
-    transform: translateX(-305.2%);
-  }
-  90% {
-    transform: translateX(-305.2%);
-  }
+.inner-list img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.inner {
+  padding: 0 16px;
 }
 
 @keyframes move-background {
