--- a/Like_lion_pj/dream.css
+++ b/Like_lion_pj/dream.css
@@ -1,94 +1,102 @@
-body{
-    text-decoration-line: none;
+body {
+  text-decoration-line: none;
 }
 .logo {
-    font-size: 6vh;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    position: relative;
-    top: 30px;
-    left: 44%;
-    z-index: 6;
-    font-family: "Schoolbell", cursive;
-  }
-  
-  .nav1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    left: 24%;
-    top:58px;
-    font-size: 1.1em;
-    list-style-type: none;
-    font-family: "Schoolbell", cursive;
-  }
-  .nav1 a{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-  }
-  .nav1 li a:hover {
-    transform: translate(0, -30%);
-    opacity: 1;
-    text-shadow: 1px 1px 1px white;
-    color: rgb(248, 166, 14);
-  }
-  
-  .nav1 li {
-    margin-right: 100px;
-  }
-  
-  .nav2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: relative;
-    width: 100px;
-    top: -14px;
-    right: -67%;
-    font-size: 1.1em;
-    list-style-type: none;
-    font-family: "Schoolbell", cursive;
-  }
-  .nav2 a{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-  }
-  .nav2 li a:hover {
-    transform: translate(0, -30%);
-    opacity: 1;
-    text-shadow: 1px 1px 1px white;
-    color: rgb(248, 166, 14);
-  }
-  
-  .nav2 li {
-    margin-right: 100px;
-  }
-  .project{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top:30px;
-  }
-  .project a{
-    color: black;
-    text-decoration: none;
-    background-color: #8c8c8c;
-    border-radius: 10px;
-    padding: 15px; 
-    display: inline-block; 
-    width: 300px;
-    height: 200px;
-    text-align: center;
-    margin: 5px;
-    line-height: 200px;
-    font-family: "Dongle", sans-serif;
-    font-size: 30px;
-} 
+  font-size: 6vh;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  position: relative;
+  top: 30px;
+  left: 44%;
+  z-index: 6;
+  font-family: 'Schoolbell', cursive;
+}
 
-.project a:hover{
-    color: white;
-    
+.nav1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: absolute;
+  left: 24%;
+  top: 58px;
+  font-size: 1.1em;
+  list-style-type: none;
+  font-family: 'Schoolbell', cursive;
+}
+.nav1 a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+.nav1 li a:hover {
+  transform: translate(0, -30%);
+  opacity: 1;
+  text-shadow: 1px 1px 1px white;
+  color: rgb(248, 166, 14);
+}
+
+.nav1 li {
+  margin-right: 100px;
+}
+
+.nav2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  width: 100px;
+  top: -14px;
+  right: -67%;
+  font-size: 1.1em;
+  list-style-type: none;
+  font-family: 'Schoolbell', cursive;
+}
+.nav2 a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+.nav2 li a:hover {
+  transform: translate(0, -30%);
+  opacity: 1;
+  text-shadow: 1px 1px 1px white;
+  color: rgb(248, 166, 14);
+}
+
+.nav2 li {
+  margin-right: 100px;
+}
+.project {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 30px;
+}
+.project a {
+  color: black;
+  text-decoration: none;
+  background-color: #8c8c8c;
+  border-radius: 10px;
+  padding: 30px;
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  margin: 5px;
+  line-height: 200px;
+  font-family: 'Dongle', sans-serif;
+  font-size: 30px;
+  line-height: 550px;
+}
+.project a:nth-child(1) {
+  background-image: url('./img/dream1.png');
+  background-size: 320px 260px;
+}
+
+.project a:nth-child(2) {
+  background-image: url('./img/dream2.png');
+  background-size: 370px 260px;
+}
+.project a:hover {
+  color: rgb(255, 170, 170);
 }
 #modal.modal-overlay {
   width: 100vw;
@@ -109,16 +117,16 @@ body{
   display: none;
   z-index: 3;
 }
-#btn-modal{
+#btn-modal {
   position: relative;
 }
 #modal .modal-window {
   background: #d0eaffb3;
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border: 1px solid rgba(255, 255, 255, 0.18);
   width: 400px;
   height: 500px;
   position: sticky;
@@ -137,7 +145,7 @@ body{
   display: inline;
 }
 #modal .close-area {
-  top:-90px;
+  top: -90px;
   position: relative;
   display: inline;
   float: right;
@@ -146,7 +154,7 @@ body{
   text-shadow: 1px 1px 2px gray;
   color: white;
 }
-.footer{
+.footer {
   position: relative;
   top: 100px;
   left: 200px;
@@ -160,7 +168,7 @@ body{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  font-family: "FontAwesome";
+  font-family: 'FontAwesome';
   z-index: 6;
 }
 
@@ -210,12 +218,12 @@ body{
 .footer ul li:nth-child(4) a:hover {
   background-color: #7fffbb;
 }
-.footer p{
+.footer p {
   position: relative;
   z-index: 5;
   color: rgb(0, 0, 0);
   bottom: -200px;
   left: -43%;
-  font-family: "Poor Story", cursive;
+  font-family: 'Poor Story', cursive;
   font-size: 20px;
-}   
+}
